# excc

./: .gitignore  README.md
examples/: 00-simple_exccsd_dmrg.py  00-simple_exccsd_fci.py  00-simple_exccsd_shciscf.py  01-n2_pes_exccsd.py  02-exccsd_dmrg_reorder.py  03-time_evolution.py
excc/: __init__.py  _fci_ci_to_cc.py  exccsd_dmrg_slow.py  exccsd_fci_slow.py  exccsd_hci_slow.py  exccsd_slow.py
excc/lib/: CMakeLists.txt  __init__.py  config.h.in  load_library.py
excc/lib/cc/: CMakeLists.txt  ci_to_cc.c  code_gen.py  ecccsd_t.c
test/: 00-simple_exccsd.py  01-n2_pes_exccsd.py
